--- a/src/client/index.css
+++ b/src/client/index.css
@@ -6,8 +6,8 @@
 }
 
 #root {
-  padding-left: 30%;
-  padding-right: 30%;
+  padding-left: 0.5%;
+  padding-right: 0.5%;
   height: 100vh;
 }
 
@@ -24,29 +24,6 @@ ul {
 
 a {
   text-decoration: none;
-  color: #2d3233;
+  color: #f0f7f5;
 }
 
-button {
-  background-color: #3e99c0;
-  border-radius: 8px;
-  border-width: 0px;
-  font-weight: 295;
-  color: rgb(255, 255, 255);
-  padding: 5px;
-  font-size: 17px;
-}
-
-@media screen and (max-width: 1400px) {
-  #root {
-    padding-left: 30%;
-    padding-right: 30%;
-  }
-}
-
-@media screen and (max-width: 750px) {
-  #root {
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
